[gd_scene load_steps=2 format=3 uid="uid://c7yxm8qvxqw3r"]

[ext_resource type="Script" path="res://settings_panel.gd" id="1"]

[node name="SettingsPanel" type="PopupPanel"]
title = "Settings"
initial_position = 2
size = Vector2i(500, 600)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 596.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "API Settings"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BasicLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Basic Settings"

[node name="ApiKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "API Key:"

[node name="ApiKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter your SiliconFlow API key"
secret = true

[node name="ModelLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Model:"

[node name="ModelOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="MaxTokensLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Max Tokens:"

[node name="MaxTokensSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 32768.0
value = 4096.0

[node name="TemperatureLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Temperature:"

[node name="TemperatureSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.1
value = 0.7

[node name="ThinkingLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Thinking Settings"

[node name="EnableThinkingCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Enable Thinking Mode"

[node name="ThinkingBudgetLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Thinking Budget:"

[node name="ThinkingBudgetSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 128.0
max_value = 32768.0
value = 4096.0

[node name="AdvancedLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Advanced Settings"

[node name="TopPLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Top P:"

[node name="TopPSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.7

[node name="TopKLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Top K:"

[node name="TopKSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 100.0
value = 50.0

[node name="MinPLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Min P:"

[node name="MinPSpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.05

[node name="FrequencyPenaltyLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Frequency Penalty:"

[node name="FrequencyPenaltySpin" type="SpinBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = -2.0
max_value = 2.0
step = 0.1

[node name="StopLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
layout_mode = 2
text = "Stop Sequence (optional):"

[node name="StopInput" type="LineEdit" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Leave empty for none"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
